html structure mock up - wip

--- a/index.html
+++ b/index.html
@@ -1,13 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Nicola's Portfolio</title>
 </head>
+
 <body>
-    
+
+    <!-- header & nav -->
+    <header>
+        <h1>Nicola Brucoli ● Creative Developer</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Works</a>
+                </li>
+                <li>
+                    <a href="#">Contacts</a>
+                </li>
+                <li>
+                    <a href="#">Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- hero section with avatar & caption -->
+    <section id="hero">
+        <img src="https://placehold.co/400" id="avatar" />
+        <div id="bio">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore quis dolore et. Itaque commodi fugiat
+                odio cumque ea libero quo in aperiam soluta aliquam laboriosam officia, sint iste illo sapiente!
+            </p>
+        </div>
+    </section>
+
+    <!-- main container which includes "about" & "works" sections -->
+    <main>
+
+        <!-- about section -->
+        <section id="about">
+            <div class="section-title">
+                <h2>About</h2>
+            </div>
+            <div class="section-content">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem sunt earum pariatur aperiam.
+                    Aspernatur natus autem sit eaque eius, molestiae numquam veniam odit facilis perspiciatis nisi!
+                    Laudantium blanditiis veritatis consequuntur?
+                    Eveniet quia hic, dolores corporis amet expedita atque blanditiis minus magnam quae vero nihil
+                    soluta maiores quo temporibus labore eum sequi unde? Maxime tempore architecto similique recusandae
+                    molestiae ab nobis.
+                </p>
+            </div>
+        </section>
+
+        <!-- works section -->
+        <section id="works">
+            <div class="section-title">
+                <h2>Works</h2>
+            </div>
+            <div class="grid-section">
+
+                <!-- the class main project will be 1 row & 2 columns wide -->
+                <div class="main-project">
+                    <img src="https://placehold.co/600x400" />
+                    <h3></h3>Project Title</h3>
+                    <a href="#">Github Link</a>
+                </div>
+
+                <!-- the class project will be 1 row & 1 column wide -->
+                <div class="project">
+                    <img src="https://placehold.co/400" />
+                    <h3></h3>Project Title</h3>
+                    <a href="#">Github Link</a>
+                </div>
+                <div class="project">
+                    <img src="https://placehold.co/400" />
+                    <h3></h3>Project Title</h3>
+                    <a href="#">Github Link</a>
+                </div>
+                <div class="project">
+                    <img src="https://placehold.co/400" />
+                    <h3></h3>Project Title</h3>
+                    <a href="#">Github Link</a>
+                </div>
+                <div class="project">
+                    <img src="https://placehold.co/400" />
+                    <h3></h3>Project Title</h3>
+                    <a href="#">Github Link</a>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- footer to include the contact details -->
+    <footer>
+        <div class="section-title">
+            <h2>Contacts</h2>
+        </div>
+        <div class="section-content">
+            <ul>
+                <li>
+                    <a href="#">Mobile Number</a>
+                </li>
+                <li>
+                    <a href="#">Email</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+                <li>
+                    <a href="#">Dribbble</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
+
 </html>
