--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Nicola's Portfolio</title>
@@ -32,15 +35,16 @@
         </nav>
     </header>
 
-    <!-- hero section with avatar & caption -->
-    <section id="hero">
-        <img src="https://placehold.co/400" id="avatar" />
-        <div id="bio">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore quis dolore et. Itaque commodi fugiat
-                odio cumque ea libero quo in aperiam soluta aliquam laboriosam officia, sint iste illo sapiente!
-            </p>
-        </div>
+    <!-- bio section with avatar & caption -->
+        <section id="bio">
+            <img src="https://placehold.co/400" id="avatar" />
+            <div class="section-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+    </div>
     </section>
 
     <!-- main container which includes "about" & "works" sections -->
@@ -48,10 +52,10 @@
 
         <!-- about section -->
         <section id="about">
-            <div class="section-title">
+            <div class="section-title narrow">
                 <h2>About</h2>
             </div>
-            <div class="section-content">
+            <div class="section-content wide">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem sunt earum pariatur aperiam.
                     Aspernatur natus autem sit eaque eius, molestiae numquam veniam odit facilis perspiciatis nisi!
@@ -65,37 +69,32 @@
 
         <!-- works section -->
         <section id="works">
-            <div class="section-title">
+            <div class="section-title narrow">
                 <h2>Works</h2>
             </div>
-            <div class="grid-section">
+            <div class="grid-section wide">
 
                 <!-- the class main project will be 1 row & 2 columns wide -->
                 <div class="main-project">
-                    <img src="https://placehold.co/600x400" />
-                    <h3></h3>Project Title</h3>
-                    <a href="#">Github Link</a>
+                    <h3>Project Title</h3>
+                    <a href="#">Github</a>
                 </div>
 
                 <!-- the class project will be 1 row & 1 column wide -->
                 <div class="project">
-                    <img src="https://placehold.co/400" />
-                    <h3></h3>Project Title</h3>
+                    <h3>Project Title</h3>
                     <a href="#">Github Link</a>
                 </div>
                 <div class="project">
-                    <img src="https://placehold.co/400" />
-                    <h3></h3>Project Title</h3>
+                    <h3>Project Title</h3>
                     <a href="#">Github Link</a>
                 </div>
                 <div class="project">
-                    <img src="https://placehold.co/400" />
-                    <h3></h3>Project Title</h3>
+                    <h3>Project Title</h3>
                     <a href="#">Github Link</a>
                 </div>
                 <div class="project">
-                    <img src="https://placehold.co/400" />
-                    <h3></h3>Project Title</h3>
+                    <h3>Project Title</h3>
                     <a href="#">Github Link</a>
                 </div>
             </div>
@@ -105,13 +104,13 @@
 
     <!-- footer to include the contact details -->
     <footer>
-        <div class="section-title">
+        <div class="section-title narrow">
             <h2>Contacts</h2>
         </div>
-        <div class="section-content">
+        <div class="section-content wide">
             <ul>
                 <li>
-                    <a href="#">Mobile Number</a>
+                    <a href="#">Mobile</a>
                 </li>
                 <li>
                     <a href="#">Email</a>
@@ -120,10 +119,10 @@
                     <a href="#">GitHub</a>
                 </li>
                 <li>
-                    <a href="#">Twitter</a>
+                    <a href="#">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="#">Dribbble</a>
+                    <a href="#">Twitter</a>
                 </li>
             </ul>
         </div>
