avatar image link updated

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- bio section with avatar & caption -->
     <section id="bio">
         <div id="bio-wrapper">
-            <img src="https://placehold.co/400" id="avatar" />
+            <img src="./assets/images/webp/avatar.webp" id="avatar" />
             <div class="section-content">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
