added actual copy to the index.html - also working on an icon visible on :hover:after. Added svg background to the bio section create new accent color and added style for paragraph share icon an the related :hover pseudo classes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <img src="./assets/images/webp/avatar.webp" id="avatar" />
             <div class="section-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna.
+                    Hi! I'm a Designer who codes. I create unique experience and thoughtful digital product within the modern web.
+                    Currently living in Lonndon, UK.
                 </p>
             </div>
         </div>
@@ -61,17 +61,14 @@
         <section id="about">
             <div id="about-wrapper">
                 <div class="section-title narrow">
-                    <h2>About</h2>
+                    <h2>About</h2><span class="material-symbols-outlined share"> </span>
                 </div>
                 <div class="section-content wide">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem sunt earum pariatur aperiam.
-                        Aspernatur natus autem sit eaque eius, molestiae numquam veniam odit facilis perspiciatis nisi!
-                        Laudantium blanditiis veritatis consequuntur?
-                        Eveniet quia hic, dolores corporis amet expedita atque blanditiis minus magnam quae vero nihil
-                        soluta maiores quo temporibus labore eum sequi unde? Maxime tempore architecto similique
-                        recusandae
-                        molestiae ab nobis.
+                        Designer by day, coder by night. Born as Digital Designer, my superpowers are as diverse as my
+                        playlist—from UX/UI Design to Frontend Development. When I'm not out there saving the digital
+                        world, you'll find me leveling up my skills because, hey, why not? You ask me something new? No
+                        problem at all, <span class="accent-color">can do!</span>
                     </p>
                 </div>
             </div>
@@ -81,7 +78,9 @@
         <section id="works">
             <div id="works-wrapper">
                 <div class="section-title narrow">
-                    <h2>Works</h2>
+                    <span class="material-symbols-outlined share">
+                        <h2><a>Works</a></h2>
+                    </span>
                 </div>
                 <div class="grid-section wide">
 
@@ -161,11 +160,11 @@
     <footer>
         <div id="footer-wrapper">
             <div class="section-title narrow">
-                <h2>Contacts</h2>
+                <h2>Contacts</h2><span class="material-symbols-outlined share"> </span>
             </div>
             <div class="section-content wide">
                 <h4>Developed with <span class="material-symbols-outlined">
-                    sports_bar
+                        sports_bar
                     </span> by Nicola Brucoli</h4>
                 <ul>
                     <li>
