adding actual links to each anchor tags and listing technologies for each project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
@@ -25,16 +26,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#">Works</a>
+                        <a href="#works">Works</a>
                     </li>
                     <li>
-                        <a href="#">Contacts</a>
+                        <a href="#contacts">Contacts</a>
                     </li>
                     <li>
-                        <a href="#">Resume</a>
+                        <a href="#" class="disabled">Resume</a>
                     </li>
                 </ul>
             </nav>
@@ -61,7 +62,8 @@
         <section id="about">
             <div id="about-wrapper">
                 <div class="section-title narrow">
-                    <h2>About</h2><span class="material-symbols-outlined share"> </span>
+                    <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                        href="#about">About</a></h2></span>
                 </div>
                 <div class="section-content wide">
                     <p>
@@ -78,9 +80,8 @@
         <section id="works">
             <div id="works-wrapper">
                 <div class="section-title narrow">
-                    <span class="material-symbols-outlined share">
-                        <h2><a>Works</a></h2>
-                    </span>
+                    <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                        href="#works">Works</a></h2></span>
                 </div>
                 <div class="grid-section wide">
 
@@ -89,8 +90,13 @@
                         <h3>Login Screen</h3>
                         <div class="project-preview" id="project1">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="#" class="disabled">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>Tailwind</li>
+                                    <li>React</li>
+                                    <li>Firebase</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -100,17 +106,25 @@
                         <h3>Volleyball Scorecounter</h3>
                         <div class="project-preview" id="project2">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/scoreboard">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JS</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="project">
-                        <h3>Digital Business Card</h3>
+                        <h3>Digital Bio Card</h3>
                         <div class="project-preview" id="project3">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/react-bio-card">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>React</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -118,8 +132,12 @@
                         <h3>React Travel Journal</h3>
                         <div class="project-preview" id="project4">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/react-journal">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>React</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -127,8 +145,11 @@
                         <h3>HoriSEOn Code Refactor</h3>
                         <div class="project-preview" id="project5">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/horiSEOn-refactoring">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -136,8 +157,13 @@
                         <h3>Personal Creative Portfolio</h3>
                         <div class="project-preview" id="project6">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/nicola.im">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>Hugo</li>
+                                    <li>Markdown</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -145,8 +171,11 @@
                         <h3>Fantasy Landing Page</h3>
                         <div class="project-preview" id="project7">
                             <div class="links">
-                                <a href="#">Github</a>
-                                <a href="#">Github</a>
+                                <a href="https://github.com/sonictrain/hometown-homepage">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -157,30 +186,31 @@
     </main>
 
     <!-- footer to include the contact details -->
-    <footer>
+    <footer id="contacts">
         <div id="footer-wrapper">
             <div class="section-title narrow">
-                <h2>Contacts</h2><span class="material-symbols-outlined share"> </span>
+                <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                    href="#contacts">Contacts</a></h2></span>
             </div>
             <div class="section-content wide">
-                <h4>Developed with <span class="material-symbols-outlined">
+                <h4>Made with <span class="material-symbols-outlined">
                         sports_bar
                     </span> by Nicola Brucoli</h4>
                 <ul>
                     <li>
-                        <a href="#">Mobile</a>
+                        <a href="tel:+447759295309">Call me</a>
                     </li>
                     <li>
-                        <a href="#">Email</a>
+                        <a href="mailto:nicola.brucoli92@gmail.com?subject=Hello Nicola!">Send me an Email</a>
                     </li>
                     <li>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/sonictrain">My GitHub</a>
                     </li>
                     <li>
-                        <a href="#">LinkedIn</a>
+                        <a href="https://it.linkedin.com/in/brucolinicola">My LinkedIn</a>
                     </li>
                     <li>
-                        <a href="#">Twitter</a>
+                        <a href="https://dribbble.com/nic0la/collections/">My Dribbble</a>
                     </li>
                 </ul>
             </div>
