Title tooltip improved displaying a content with :hover::after only if an <a> tag contains an empty title property, replacing the default tooltip which doesn't look great

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="about">
             <div id="about-wrapper">
                 <div class="section-title narrow">
-                    <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                    <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
                         href="#about">About</a></h2></span>
                 </div>
                 <div class="section-content wide">
@@ -80,7 +80,7 @@
         <section id="works">
             <div id="works-wrapper">
                 <div class="section-title narrow">
-                    <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                    <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
                         href="#works">Works</a></h2></span>
                 </div>
                 <div class="grid-section wide">
@@ -189,7 +189,7 @@
     <footer id="contacts">
         <div id="footer-wrapper">
             <div class="section-title narrow">
-                <span class="material-symbols-outlined share"><h2><a title="Right click and copy link to share" target="_blank" 
+                <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
                     href="#contacts">Contacts</a></h2></span>
             </div>
             <div class="section-content wide">
