added alt to the image, code formatting & footer heading changed from h4 to h3

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     <!-- bio section with avatar & caption -->
     <section id="bio">
         <div id="bio-wrapper">
-            <img src="./assets/images/webp/avatar.webp" id="avatar" />
+            <img alt="Nicola Brucoli Profile Picture" src="./assets/images/webp/avatar.webp" id="avatar" />
             <div class="section-content">
                 <p>
-                    Hi! I'm a Designer who codes. I create unique experience and thoughtful digital product within the modern web.
+                    Hi! I'm a Designer who codes. I create unique experience and thoughtful digital product within the
+                    modern web.
                     Currently living in Lonndon, UK.
                 </p>
             </div>
@@ -62,8 +63,9 @@
         <section id="about">
             <div id="about-wrapper">
                 <div class="section-title narrow">
-                    <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
-                        href="#about">About</a></h2></span>
+                    <span class="material-symbols-outlined share">
+                        <h2><a title="" target="_blank" href="#about">About</a></h2>
+                    </span>
                 </div>
                 <div class="section-content wide">
                     <p>
@@ -80,8 +82,11 @@
         <section id="works">
             <div id="works-wrapper">
                 <div class="section-title narrow">
-                    <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
-                        href="#works">Works</a></h2></span>
+                    <span class="material-symbols-outlined share">
+                        <h2>
+                            <a title="" target="_blank" href="#works">Works</a>
+                        </h2>
+                    </span>
                 </div>
                 <div class="grid-section wide">
 
@@ -90,7 +95,8 @@
                         <h3>Login Screen</h3>
                         <div class="project-preview" id="project1">
                             <div class="links">
-                                <a href="#" class="disabled">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="#" class="disabled">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>Tailwind</li>
@@ -106,7 +112,8 @@
                         <h3>Volleyball Scorecounter</h3>
                         <div class="project-preview" id="project2">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/scoreboard">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/scoreboard">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
@@ -119,7 +126,8 @@
                         <h3>Digital Bio Card</h3>
                         <div class="project-preview" id="project3">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/react-bio-card">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/react-bio-card">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
@@ -132,7 +140,8 @@
                         <h3>React Travel Journal</h3>
                         <div class="project-preview" id="project4">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/react-journal">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/react-journal">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
@@ -145,7 +154,8 @@
                         <h3>HoriSEOn Code Refactor</h3>
                         <div class="project-preview" id="project5">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/horiSEOn-refactoring">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/horiSEOn-refactoring">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
@@ -157,12 +167,12 @@
                         <h3>Personal Creative Portfolio</h3>
                         <div class="project-preview" id="project6">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/nicola.im">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/nicola.im">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
                                     <li>Hugo</li>
-                                    <li>Markdown</li>
                                 </ul>
                             </div>
                         </div>
@@ -171,7 +181,8 @@
                         <h3>Fantasy Landing Page</h3>
                         <div class="project-preview" id="project7">
                             <div class="links">
-                                <a href="https://github.com/sonictrain/hometown-homepage">Github <span class="material-symbols-outlined go-to">arrow_outward</span></a>
+                                <a href="https://github.com/sonictrain/hometown-homepage">Github <span
+                                        class="material-symbols-outlined go-to">arrow_outward</span></a>
                                 <ul>
                                     <li>HTML</li>
                                     <li>CSS</li>
@@ -189,13 +200,14 @@
     <footer id="contacts">
         <div id="footer-wrapper">
             <div class="section-title narrow">
-                <span class="material-symbols-outlined share"><h2><a title="" target="_blank" 
-                    href="#contacts">Contacts</a></h2></span>
+                <span class="material-symbols-outlined share">
+                    <h2><a title="" target="_blank" href="#contacts">Contacts</a></h2>
+                </span>
             </div>
             <div class="section-content wide">
-                <h4>Made with <span class="material-symbols-outlined">
+                <h3>Made with <span class="material-symbols-outlined">
                         sports_bar
-                    </span> by Nicola Brucoli</h4>
+                    </span> by Nicola Brucoli</h3>
                 <ul>
                     <li>
                         <a href="tel:+447759295309">Call me</a>
